// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Syncs Both empty 1`] = `
[
  "",
  [
    [
      "",
      {},
      0,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  0,
]
`;

exports[`Syncs Both match 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              922886432,
            ],
            "r2": [
              "Hc2DO@000008DKS9",
              {
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              4100269854,
            ],
          },
          1784087264,
        ],
        "t2": [
          "Hc2DO@000008DKS9",
          {
            "r2": [
              "Hc2DO@000008DKS9",
              {
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              4100269854,
            ],
          },
          4279580014,
        ],
      },
      3499952990,
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          2,
          903550280,
        ],
        "v2": [
          "Hc2DO@000008DKS9",
          2,
          903550280,
        ],
      },
      463169060,
    ],
  ],
  3406196090,
]
`;

exports[`Syncs store1 empty 1`] = `
[
  "000000000005DK@@",
  [
    [
      "000000000005DK@@",
      {
        "t1": [
          "000000000005DK@@",
          {
            "r1": [
              "000000000005DK@@",
              {
                "c1": [
                  "000000000005DK@@",
                  1,
                  4101790724,
                ],
                "c2": [
                  "000000000005DK@@",
                  2,
                  4117505159,
                ],
              },
              2451863536,
            ],
            "r2": [
              "000000000005DK@@",
              {
                "c2": [
                  "000000000005DK@@",
                  2,
                  4117505159,
                ],
              },
              843446573,
            ],
          },
          1908558475,
        ],
        "t2": [
          "000000000005DK@@",
          {
            "r2": [
              "000000000005DK@@",
              {
                "c2": [
                  "000000000005DK@@",
                  2,
                  4117505159,
                ],
              },
              843446573,
            ],
          },
          569789438,
        ],
      },
      748352925,
    ],
    [
      "000000000005DK@@",
      {
        "v1": [
          "000000000005DK@@",
          2,
          4117505159,
        ],
        "v2": [
          "000000000005DK@@",
          2,
          4117505159,
        ],
      },
      3147464013,
    ],
  ],
  2533394640,
]
`;

exports[`Syncs store1 missing tables 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "000000000005DK@@",
      {
        "t1": [
          "000000000005DK@@",
          {
            "r1": [
              "000000000005DK@@",
              {
                "c1": [
                  "000000000005DK@@",
                  1,
                  4101790724,
                ],
                "c2": [
                  "000000000005DK@@",
                  2,
                  4117505159,
                ],
              },
              2451863536,
            ],
            "r2": [
              "000000000005DK@@",
              {
                "c2": [
                  "000000000005DK@@",
                  2,
                  4117505159,
                ],
              },
              843446573,
            ],
          },
          1908558475,
        ],
        "t2": [
          "000000000005DK@@",
          {
            "r2": [
              "000000000005DK@@",
              {
                "c2": [
                  "000000000005DK@@",
                  2,
                  4117505159,
                ],
              },
              843446573,
            ],
          },
          569789438,
        ],
      },
      748352925,
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          2,
          903550280,
        ],
        "v2": [
          "Hc2DO@000008DKS9",
          2,
          903550280,
        ],
      },
      463169060,
    ],
  ],
  922850233,
]
`;

exports[`Syncs store2 empty 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              922886432,
            ],
            "r2": [
              "Hc2DO@000008DKS9",
              {
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              4100269854,
            ],
          },
          1784087264,
        ],
        "t2": [
          "Hc2DO@000008DKS9",
          {
            "r2": [
              "Hc2DO@000008DKS9",
              {
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              4100269854,
            ],
          },
          4279580014,
        ],
      },
      3499952990,
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          2,
          903550280,
        ],
        "v2": [
          "Hc2DO@000008DKS9",
          2,
          903550280,
        ],
      },
      463169060,
    ],
  ],
  3406196090,
]
`;
